--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -3483,3 +3483,25 @@ emoji-mart{
         display: none;
     }
 }
+
+.loading-spin-progress{
+    display: inline-block;
+    border: 3px solid #E4E5E7;
+    border-radius: 50%;
+    border-top: 3px solid #0D6EFD;
+    width: 22px;
+    height: 22px;
+    -webkit-animation: spin-loader 2s linear infinite;
+    animation: spin-loader 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin-loader {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+  
+@keyframes spin-loader {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
