grid template layout issue and livesearch closing when click on accordion issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -7365,12 +7365,12 @@ body{
 }
 .searchAssist-kore-chat-window.search-container.conversation .search-body .livesearchResultsNotFound{
     text-align: center;
-    padding:112px 0px;
+    padding:116px 0px;
     color: #9aa0a6;
 }
 .searchAssist-kore-chat-window.search-container.conversation #autoSuggestionContainer .suggestion-search-data-parent .noquerySuggestionsFound{
 text-align: center;
-padding:70px 0px;
+padding:53px 0px;
 color: #9aa0a6;
 }
 .searchAssist-kore-chat-window.search-container.conversation .search-body{
@@ -7378,7 +7378,7 @@ color: #9aa0a6;
     background: #FFFFFF;
     margin: 5px;
     max-height: 250px;
-    /* min-height: 250px; */
+    min-height: 250px;
     bottom: 0;
     position: relative;
     width: auto !important;
@@ -12104,6 +12104,7 @@ border: 0;
     font-size: 12px;
     line-height: 15px;
     margin-top: 10px;
+    height: auto;
 }
 
 /* Tile with text styles End*/
