--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -505,6 +505,19 @@
                             font-weight: 500;
                             font-size: 12px;
                             text-transform: uppercase;
+                            &.last-update{
+                                display: flex;
+                                align-items: center;
+                                .sort-up-down-icons{
+                                    display: flex;
+                                    align-items: center;
+                                    flex-direction: column;
+                                    margin-right: 8px;
+                                    cursor: pointer;
+                                    height: 12px;
+                                    justify-content: space-between;
+                                }
+                            }
                         }
                     }    
                     .accordion-section{
