--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -423,6 +423,16 @@
                                     font-weight: 500;
                                     line-height: 20px;
                                     color: #202124;
+                                    position: relative;
+                                    cursor: pointer;
+                                    &.selected-list{
+                                        background: #EFF0F1;
+                                    }
+                                    .check-icon{
+                                        position: absolute;
+                                        right: 6px;
+                                        top: 11px;
+                                    }
                                     &:hover{
                                         background: #EFF0F1;
                                     }
